src/main/java/com/example/WeatherSensor/util/errors/sensor/SensorNotCreatedException.java
package com.example.WeatherSensor.util.errors.sensor;

public class SensorNotCreatedException extends RuntimeException{

    public SensorNotCreatedException(String msg){
        super(msg);
    }
}
